--- a/index.html
+++ b/index.html
@@ -229,10 +229,59 @@
                 </div>
             </section>
             <section class="follow-us">
-                <h3>FOLLOW US</h3>
-                <p>Instagram</p>
-                <!-- 슬라이더 -->
-                <div class="follow-us-slider-wrap"></div>
+                <div class="follow-title">
+                    <h3>FOLLOW US</h3>
+                    <p>Instagram</p>
+                </div>
+                <ul class="follow-slider">
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-02.jpg" alt="인스타그램 크리스마스1" />
+                            <div class="hover">
+                                <p>@madforgalic_kr</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-03.jpg" alt="인스타그램 크리스마스2" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-04.jpg" alt="인스타그램 매드뉴이어" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-01.jpg" alt="인스타그램 최애메뉴는" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-05.jpg" alt="인스타그램 매드라자냐1" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-06.jpg" alt="인스타그램 매드라자냐2" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./img/insta-07.jpg" alt="인스타그램 kt멤버십" />
+                            <p>@madforgalic_kr</p>
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- 슬라이더
+                <div class="follow-us-slider-wrap"></div> -->
             </section>
         </main>
         <hr />
