--- a/index.html
+++ b/index.html
@@ -109,22 +109,24 @@
             <section class="lunch-set">
                 <div class="inner">
                     <div class="lunch-con">
-                        <div>
-                            <strong>풀코스 매드런치</strong>
-                            <h3>Mad Lunch</h3>
-                            <p>
-                                부담 없는 가격으로<br />
-                                꽉 차게 즐기는<br />
-                                <i>매드 런치 세트</i>
-                            </p>
+                        <div class="lunch-text">
+                            <div>
+                                <strong>풀코스 매드런치</strong>
+                                <h3>Mad Lunch</h3>
+                                <p>
+                                    부담 없는 가격으로<br />
+                                    꽉 차게 즐기는<br />
+                                    <i>매드 런치 세트</i>
+                                </p>
+                            </div>
+                            <a class="view-more" href="#">자세히 보기</a>
                         </div>
-                        <a class="view-more" href="#">자세히 보기</a>
-                    </div>
-                    <div class="lunch-set-slider-wrap">
-                        <!-- swiper.js의 마크업 -->
-                        <img src="./img/lunch-main-01.jpg" alt="" />
-                        <img src="./img/lunch-main-02.jpg" alt="" />
-                        <img src="./img/lunch-main-03.jpg" alt="" />
+                        <div class="lunch-set-slider-wrap">
+                            <!-- swiper.js의 마크업 -->
+                            <img src="./img/lunch-main-01.jpg" alt="" />
+                            <img src="./img/lunch-main-02.jpg" alt="" />
+                            <img src="./img/lunch-main-03.jpg" alt="" />
+                        </div>
                     </div>
                 </div>
             </section>
@@ -156,52 +158,54 @@
             <section class="membership">
                 <div class="inner">
                     <div class="membership-con">
-                        <div class="con-title">
-                            <h3>M CLUB</h3>
-                            <strong>멤버십 혜택</strong>
-                            <p>M CLUB Membership Benefit</p>
-                            <p>
-                                모든 브랜드에서<br />
-                                적립하고 혜택 누리는<br />
-                                올인원 멤버십 <i>M CLUB</i>
-                            </p>
+                        <div class="membership-text">
+                            <div class="membership-title">
+                                <h3>M CLUB</h3>
+                                <strong>멤버십 혜택</strong>
+                                <p>M CLUB Membership Benefit</p>
+                                <p>
+                                    모든 브랜드에서<br />
+                                    적립하고 혜택 누리는<br />
+                                    올인원 멤버십 <i>M CLUB</i>
+                                </p>
+                            </div>
+                            <a class="view-more" href="#">자세히 보기</a>
                         </div>
-                        <a class="view-more" href="#">자세히 보기</a>
-                    </div>
-                    <div class="membership-left">
-                        <ol class="membership-cards">
-                            <li>
-                                <dl>
-                                    <dt>생일 혜택</dt>
-                                    <dd>생일 축하 기념 디저트&커피 이용권, 와인 할인 혜택</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <dl>
-                                    <dt>M CLUB 리워즈</dt>
-                                    <dd>방문 횟수 & 누적 금액에 따라 최대 4인 식사권 증정</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <dl>
-                                    <dt>웰컴 바우처</dt>
-                                    <dd>M CLUB 가입 시 18만원 상당의 8종 쿠폰 증정</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <dl>
-                                    <dt>리워즈 선물하기</dt>
-                                    <dd>멤버십 회원간 리워즈 쿠폰 선물기능</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <dl>
-                                    <dt>와인 배지 혜택</dt>
-                                    <dd>멤버십 고객 한정 와인 배지 제공</dd>
-                                </dl>
-                            </li>
-                        </ol>
-                        <a href="#"><i>M CLUB 가입</i></a>
+                        <div class="membership-left">
+                            <ol class="membership-cards">
+                                <li>
+                                    <dl>
+                                        <dt>생일 혜택</dt>
+                                        <dd>생일 축하 기념 디저트&커피 이용권, 와인 할인 혜택</dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <dl>
+                                        <dt>M CLUB 리워즈</dt>
+                                        <dd>방문 횟수 & 누적 금액에 따라 최대 4인 식사권 증정</dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <dl>
+                                        <dt>웰컴 바우처</dt>
+                                        <dd>M CLUB 가입 시 18만원 상당의 8종 쿠폰 증정</dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <dl>
+                                        <dt>리워즈 선물하기</dt>
+                                        <dd>멤버십 회원간 리워즈 쿠폰 선물기능</dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <dl>
+                                        <dt>와인 배지 혜택</dt>
+                                        <dd>멤버십 고객 한정 와인 배지 제공</dd>
+                                    </dl>
+                                </li>
+                            </ol>
+                            <a href="#"><i>M CLUB 가입</i></a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -237,7 +241,7 @@
                     <li>
                         <a href="#">
                             <img src="./img/insta-02.jpg" alt="인스타그램 크리스마스1" />
-                            <div class="hover">
+                            <div class="insta-id">
                                 <p>@madforgalic_kr</p>
                             </div>
                         </a>
@@ -245,37 +249,49 @@
                     <li>
                         <a href="#">
                             <img src="./img/insta-03.jpg" alt="인스타그램 크리스마스2" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="./img/insta-04.jpg" alt="인스타그램 매드뉴이어" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="./img/insta-01.jpg" alt="인스타그램 최애메뉴는" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="./img/insta-05.jpg" alt="인스타그램 매드라자냐1" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="./img/insta-06.jpg" alt="인스타그램 매드라자냐2" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="./img/insta-07.jpg" alt="인스타그램 kt멤버십" />
-                            <p>@madforgalic_kr</p>
+                            <div class="insta-id">
+                                <p>@madforgalic_kr</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
