--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <p>Instagram</p>
                 </div>
 
-                <div class="follou-slider-wrap">
+                <div class="follow-slider-wrap">
                     <div class="swiper follow-slider">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
