sub page html markup done

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <a class="view-more" href="#">자세히 보기</a>
                         </div>
                         <figure>
-                            <img src="./img/signature-main-bg.png" alt="시그니처 스테이크 세트" />
+                            <img src="./img/steakset1.jpg" alt="시그니처 스테이크 세트" />
                         </figure>
                     </li>
                     <li>
@@ -97,7 +97,7 @@
                             <a class="view-more" href="#">자세히 보기</a>
                         </div>
                         <figure>
-                            <img src="./img/bone-in-main-bg.png" alt="프리미엄 본-인 립아이 스테이크 세트" />
+                            <img src="./img/steakset2.jpg" alt="프리미엄 본-인 립아이 스테이크 세트" />
                         </figure>
                     </li>
                 </ul>
@@ -415,9 +415,34 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="swiper-slide">
+                                <a href="#">
+                                    <img src="./img/insta-08.jpg" alt="인스타그램 매드 세터를 찾습니다" />
+                                    <div class="insta-id">
+                                        <p>@madforgalic_kr</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#">
+                                    <img src="./img/insta-09.jpg" alt="인스타그램 Mad for Steak" />
+                                    <div class="insta-id">
+                                        <p>@madforgalic_kr</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#">
+                                    <img src="./img/insta-10.jpg" alt="인스타그램 A new Chapter, New Taste" />
+                                    <div class="insta-id">
+                                        <p>@madforgalic_kr</p>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
+
+                        <div class="swiper-pagination"></div>
                     </div>
-                    <div class="swiper-pagination"></div>
                 </div>
             </section>
         </main>
