--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <li><a href="#">멤버십</a></li>
                     <li><a href="#">커뮤니티</a></li>
                 </ul>
-                <button type="button" class="but-login">로그인</button>
+                <button type="button" class="btn btn-login">로그인</button>
+                <button type="button" class="btn btn-menu"><i class="hidden">메뉴</i></button>
             </nav>
         </header>
         <hr />
@@ -66,8 +67,12 @@
 
                         <div class="swiper-pagination"></div>
 
-                        <button type="button" class="btn btn-prev"><img src="./img/icon_ar_l.png" alt="이전" /></button>
-                        <button type="button" class="btn btn-next"><img src="./img/icon_ar_r.png" alt="다음" /></button>
+                        <button type="button" class="btn btn-prev">
+                            <img src="./img/icon_ar_l.png" alt="이전" />
+                        </button>
+                        <button type="button" class="btn btn-next">
+                            <img src="./img/icon_ar_r.png" alt="다음" />
+                        </button>
                     </div>
                 </div>
             </section>
@@ -115,7 +120,7 @@
                                     <i>매드 런치 세트</i>
                                 </p>
                             </div>
-                            <a class="view-more" href="#">자세히 보기</a>
+                            <a class="view-more" href="./menu.html">자세히 보기</a>
                         </div>
                         <div class="lunch-set-slider-wrap">
                             <div class="swiper lunch-set-slider">
