--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
                         <div class="detail-con">
                             <div class="con-text">
                                 <strong>시그니처 스테이크 세트</strong>
-                                <h3>Signature Steak Set</h3>
-                                <p>마늘의 풍미가 가득한 시그니처 스테이크를 풍성한 세트메뉴로</p>
+                                <h3>
+                                    Signature <br />
+                                    Steak Set
+                                </h3>
+                                <p>
+                                    마늘의 풍미가 가득한 시그니처 스테이크를 <br />
+                                    풍성한 세트메뉴로
+                                </p>
                             </div>
                             <a class="view-more" href="#">자세히 보기</a>
                         </div>
@@ -96,8 +102,14 @@
                         <div class="detail-con">
                             <div class="con-text">
                                 <strong>프리미엄 본-인 립아이 스테이크 세트</strong>
-                                <h3>Bone-in Ribeye Set</h3>
-                                <p>갈릭크림소스가 수북히 쌓인 본-인 립아이 스테이크, 세트메뉴와 함께 끝까지 맛있게</p>
+                                <h3>
+                                    Bone-in <br />
+                                    Ribeye Set
+                                </h3>
+                                <p>
+                                    갈릭크림소스가 수북히 쌓인 본-인 립아이 스테이크,<br />
+                                    세트메뉴와 함께 끝까지 맛있게
+                                </p>
                             </div>
                             <a class="view-more" href="#">자세히 보기</a>
                         </div>
@@ -456,8 +468,8 @@
         <footer id="footer">
             <strong><img src="./img/logo-white.png" alt="매드 포 갈릭" /></strong>
             <div class="foot-app">
-                <a href="#">app store</a>
-                <a href="#">google play</a>
+                <a href="#"><i>app store</i></a>
+                <a href="#"><i>google play</i></a>
             </div>
             <ul class="foot-link">
                 <li><a href="#">개인정보 처리방침</a></li>
@@ -465,7 +477,7 @@
                 <li><a href="#">채용안내</a></li>
             </ul>
             <address class="foot-copyright">
-                <p>(주)엠에프지코리아 서울시 강남구 학동로 306, 곤비빌딩 B2F / 우편번호: 06098</p>
+                <p>(주)엠에프지코리아 서울시 강남구 학동로 306, 곤비빌딩 B2F 우편번호: 06098</p>
                 <p>대표문의: 02-2286-8800</p>
                 <p>사업자번호: 261-81-16391 대표자: 문일룡</p>
                 <p>COPYRIGHT ⓒ MFGKOREA ALL RIGHTS RESERVED.</p>
